--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<manifest package="org.cmaths.fr" xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.5" android:versionCode="14" android:installLocation="auto">
+<manifest package="org.cmaths.fr" xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.6" android:versionCode="15" android:installLocation="auto">
     <application android:hardwareAccelerated="true" android:name="org.qtproject.qt5.android.bindings.QtApplication" android:label="-- %%INSERT_APP_NAME%% --" android:icon="@drawable/icon">
         <activity android:name="com.example.MyActivity" android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|layoutDirection|locale|fontScale|keyboard|keyboardHidden|navigation" android:label="-- %%INSERT_APP_NAME%% --" android:screenOrientation="portrait" android:launchMode="singleTop" android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen">
             <intent-filter>
@@ -79,4 +79,6 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
 <uses-permission android:name="android.permission.WAKE_LOCK"/>
+<!-- %%INSERT_PERMISSIONS -->
+    <!-- %%INSERT_FEATURES -->
 </manifest>
